Various pixel perfect smoothing environment fixes and wcag accessibility fixes (color contrast of cyan, credentials button icon added, input repair, placeholder image fix, sidebar fixes)

--- a/gui/admin-gui/src/frontend/scss/_bootstrap-variables.scss
+++ b/gui/admin-gui/src/frontend/scss/_bootstrap-variables.scss
@@ -9,18 +9,18 @@
 $gray-700: #495057 !default;
 $lightblue: #206F9D !default; //#3c8dbc - primary color //#307197 - acceptable //#1070A8 - cool saturated lightblue
 $green: #198754 !default;
-//$cyan: #0dcaf0 !default;
+$cyan: #008099 !default; //bootstrap value - #0dcaf0
 $yellow: #ffc107 !default;
 $red: #dc3545 !default;
 $purple: #605CA8 !default;
 
-$midpoint-secondary: #818D98 !default;
+$midpoint-secondary: #627383 !default; // previous value #818D98
 
 // override bootstrap defaults where necessary
 $primary: $lightblue;
 $secondary: $midpoint-secondary;
 $success: $green;
-//$info: $cyan;
+$info: $cyan;
 $warning: $yellow;
 $danger: $red;
 
